# she_raft

./: CMakeLists.txt  README.md  test.cpp  time.hpp
src/: client.cpp  client.h  main.cpp  shared_memory.cpp  shared_memory.h  test.cpp  test.h
src/action/: action.cpp  action.h
src/log/: log.cpp  log.h
src/server/: candidate.cpp  candidate.h  data.h  external_interface.h  follow.cpp  follow.h  group.cpp  group.h  leader.cpp  leader.h  state.h
src/time/: time.cpp  time.h
